--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "classname": "^0.0.0",
     "clsx": "^1.0.4",
     "gh-pages": "^2.0.1",
+    "lodash": "^4.17.13",
+    "lodash.template": "^4.5.0",
     "polyfill": "^0.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
