--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "polyfill": "^0.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-ga": "^2.6.0",
     "react-scripts": "3.0.1",
     "styled-components": "^4.2.0",
     "typeface-roboto": "^0.0.54"
