--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn run build",
+    "predeploy": "yarn run build && source .env && echo $REACT_APP_DOMAIN > ./build/CNAME",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
