--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
+    "acorn": "^6.4.1",
     "classname": "^0.0.0",
     "clsx": "^1.0.4",
     "gh-pages": "^2.0.1",
+    "kind-of": "^6.0.3",
     "lodash": "^4.17.13",
     "lodash.template": "^4.5.0",
+    "minimist": "^0.2.1",
     "polyfill": "^0.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
