fix: missing GA stats

--- a/.env_template
+++ b/.env_template
@@ -3,3 +3,6 @@ REACT_APP_GA_DEBUG=false
 
 # Replace your GA_TRACKING_ID
 REACT_APP_GA_TRACKING_ID=UA-000000-01
+
+# Replace your DOMAIN
+REACT_APP_DOMAIN=pron.campfire.ga
