--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
     "acorn": "^6.4.1",
     "classname": "^0.0.0",
     "clsx": "^1.0.4",
-    "gh-pages": "^2.0.1",
+    "gh-pages": "^3.2.3",
     "kind-of": "^6.0.3",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "lodash.template": "^4.5.0",
     "minimist": "^0.2.1",
     "polyfill": "^0.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-ga": "^2.6.0",
-    "react-scripts": "3.0.1",
+    "react-scripts": "5.0.0",
     "styled-components": "^4.2.0",
     "typeface-roboto": "^0.0.54"
   },
@@ -45,9 +45,11 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.2",
+    "@babel/core": "^7.16.5",
+    "@babel/eslint-parser": "^7.16.5",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0"
   },
