--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "node-forge": "^0.10.0",
     "serialize-javascript": "",
     "websocket-extensions": "^0.1.4",
-    "yargs-parser": "^13.1.2"
+    "yargs-parser": "^13.1.2",
+    "nth-check": "^2.0.1"
   }
 }
