--- a/.eslintrc
+++ b/.eslintrc
@@ -5,28 +5,55 @@
     "node": true,
     "jest": true
   },
-  "plugins": ["react"],
+  "plugins": [
+    "react"
+  ],
   "extends": "airbnb",
   "rules": {
-    "indent": [2, 2],
+    "indent": [
+      2,
+      2
+    ],
     "no-tabs": 0,
     "prefer-destructuring": 0,
     "import/no-cycle": 0,
     "no-unused-vars": 1,
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
+      }
+    ],
     "react/destructuring-assignment": 0,
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function",
+        "unnamedComponents": "arrow-function"
+      }
+    ],
     "react/no-string-refs": 0,
     "react/prop-types": 0,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/click-events-have-key-events": 0,
     "jsx-a11y/no-static-element-interactions": 0,
-    "no-plusplus": [2, { "allowForLoopAfterthoughts": true }],
+    "no-plusplus": [
+      2,
+      {
+        "allowForLoopAfterthoughts": true
+      }
+    ],
     "react/no-array-index-key": 0
   },
   "settings": {
     "import/resolver": {
       "node": {
-        "paths": ["src"]
+        "paths": [
+          "src"
+        ]
       }
     }
   }
