--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
         "unnamedComponents": "arrow-function"
       }
     ],
+    "react/jsx-props-no-spreading": 0,
     "react/no-string-refs": 0,
     "react/prop-types": 0,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
